@@ -1,28 +1,25 @@
 package gov.nist.csd.pm.pap.pml;
 
+import gov.nist.csd.pm.common.exception.PMException;
 import gov.nist.csd.pm.common.graph.relationship.AccessRightSet;
 import gov.nist.csd.pm.common.graph.relationship.Association;
-import gov.nist.csd.pm.impl.memory.pap.MemoryPAP;
-import gov.nist.csd.pm.pap.pml.exception.PMLCompilationException;
-import gov.nist.csd.pm.pap.serialization.pml.PMLDeserializer;
-import gov.nist.csd.pm.common.exception.PMException;
 import gov.nist.csd.pm.pap.PAP;
-import gov.nist.csd.pm.pap.query.model.context.UserContext;
+import gov.nist.csd.pm.pap.pml.exception.PMLCompilationException;
+import gov.nist.csd.pm.util.TestPAP;
+import gov.nist.csd.pm.util.TestUserContext;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.List;
 
+import static gov.nist.csd.pm.util.TestIdGenerator.id;
+import static gov.nist.csd.pm.util.TestIdGenerator.ids;
 import static org.junit.jupiter.api.Assertions.*;
 
 public class ExecutionTest {
 
-    static UserContext superUser = new UserContext("u1");
-
     @Test
     void testGraphPML() throws PMException {
-        PAP pap = new MemoryPAP();
+        PAP pap = new TestPAP();
 
         String input =
                 """
@@ -51,7 +48,7 @@ public class ExecutionTest {
                 associate "ua2" and "oa2" with ["read", "write"]
                 associate "ua3" and "oa3" with ["read", "write"]
                 """;
-        pap.executePML(superUser, input);
+        pap.executePML(new TestUserContext("u1"), input);
 
         assertTrue(pap.query().graph().nodeExists("pc1"));
         assertTrue(pap.query().graph().nodeExists("oa1"));
@@ -63,73 +60,73 @@ public class ExecutionTest {
         assertTrue(pap.query().graph().nodeExists("o1"));
         assertTrue(pap.query().graph().nodeExists("u1"));
 
-        assertEquals("v", pap.query().graph().getNode("pc1").getProperties().get("k"));
+        assertEquals("v", pap.query().graph().getNodeByName("pc1").getProperties().get("k"));
 
-        Collection<String> ascendants = pap.query().graph().getAdjacentAscendants("pc1");
-        assertTrue(ascendants.containsAll(Arrays.asList("ua1", "ua2", "ua3")));
-        ascendants = pap.query().graph().getAdjacentAscendants("pc1");
-        assertTrue(ascendants.containsAll(Arrays.asList("oa1", "oa2", "oa3")));
+        Collection<Long> ascendants = pap.query().graph().getAdjacentAscendants(id("pc1"));
+        assertTrue(ascendants.containsAll(ids("ua1", "ua2", "ua3")));
+        ascendants = pap.query().graph().getAdjacentAscendants(id("pc1"));
+        assertTrue(ascendants.containsAll(ids("oa1", "oa2", "oa3")));
 
-        assertTrue(pap.query().graph().getAdjacentDescendants("ua1").contains("pc1"));
-        assertTrue(pap.query().graph().getAdjacentDescendants("ua2").contains("pc1"));
-        assertTrue(pap.query().graph().getAdjacentDescendants("ua3").contains("pc1"));
-        assertTrue(pap.query().graph().getAdjacentDescendants("oa1").contains("pc1"));
-        assertTrue(pap.query().graph().getAdjacentDescendants("oa2").contains("pc1"));
-        assertTrue(pap.query().graph().getAdjacentDescendants("oa3").contains("pc1"));
-        assertTrue(pap.query().graph().getAdjacentDescendants("u1").containsAll(Arrays.asList("ua1", "ua2", "ua3")));
-        assertTrue(pap.query().graph().getAdjacentDescendants("o1").containsAll(Arrays.asList("oa1", "oa2", "oa3")));
+        assertTrue(pap.query().graph().getAdjacentDescendants(id("ua1")).contains(id("pc1")));
+        assertTrue(pap.query().graph().getAdjacentDescendants(id("ua2")).contains(id("pc1")));
+        assertTrue(pap.query().graph().getAdjacentDescendants(id("ua3")).contains(id("pc1")));
+        assertTrue(pap.query().graph().getAdjacentDescendants(id("oa1")).contains(id("pc1")));
+        assertTrue(pap.query().graph().getAdjacentDescendants(id("oa2")).contains(id("pc1")));
+        assertTrue(pap.query().graph().getAdjacentDescendants(id("oa3")).contains(id("pc1")));
+        assertTrue(pap.query().graph().getAdjacentDescendants(id("u1")).containsAll(ids("ua1", "ua2", "ua3")));
+        assertTrue(pap.query().graph().getAdjacentDescendants(id("o1")).containsAll(ids("oa1", "oa2", "oa3")));
 
-        assertEquals(new Association("ua1", "oa1", new AccessRightSet("read", "write")),
-                pap.query().graph().getAssociationsWithSource("ua1").iterator().next());
-        assertEquals(new Association("ua2", "oa2", new AccessRightSet("read", "write")),
-                pap.query().graph().getAssociationsWithSource("ua2").iterator().next());
-        assertEquals(new Association("ua3", "oa3", new AccessRightSet("read", "write")),
-                pap.query().graph().getAssociationsWithSource("ua3").iterator().next());
+        assertEquals(new Association(id("ua1"), id("oa1"), new AccessRightSet("read", "write")),
+                pap.query().graph().getAssociationsWithSource(id("ua1")).iterator().next());
+        assertEquals(new Association(id("ua2"), id("oa2"), new AccessRightSet("read", "write")),
+                pap.query().graph().getAssociationsWithSource(id("ua2")).iterator().next());
+        assertEquals(new Association(id("ua3"), id("oa3"), new AccessRightSet("read", "write")),
+                pap.query().graph().getAssociationsWithSource(id("ua3")).iterator().next());
 
         input = """
                 dissociate "ua1" and "oa1"
                 """;
-        pap.executePML(superUser, input);
-        assertTrue(pap.query().graph().getAssociationsWithSource("ua1").isEmpty());
+        pap.executePML(new TestUserContext("u1"), input);
+        assertTrue(pap.query().graph().getAssociationsWithSource(id("ua1")).isEmpty());
 
         input =
                 """
                 deassign "u1" from ["ua1", "ua2"]
                 """;
-        pap.executePML(superUser, input);
-        assertFalse(pap.query().graph().getAdjacentDescendants("u1").containsAll(Arrays.asList("ua1", "ua2")));
-        assertFalse(pap.query().graph().getAdjacentAscendants("ua1").contains("u1"));
-        assertFalse(pap.query().graph().getAdjacentAscendants("ua2").contains("u1"));
+        pap.executePML(new TestUserContext("u1"), input);
+        assertFalse(pap.query().graph().getAdjacentDescendants(id("u1")).containsAll(ids("ua1", "ua2")));
+        assertFalse(pap.query().graph().getAdjacentAscendants(id("ua1")).contains(id("u1")));
+        assertFalse(pap.query().graph().getAdjacentAscendants(id("ua2")).contains(id("u1")));
 
         input =
                 """
-                delete user "u1"
+                delete node "u1"
                 """;
-        pap.executePML(superUser, input);
+        pap.executePML(new TestUserContext("u1"), input);
         assertFalse(pap.query().graph().nodeExists("u1"));
 
         input =
                 """
                 deassign "o1" from ["oa1"]
                 """;
-        pap.executePML(superUser, input);
-        assertFalse(pap.query().graph().getAdjacentDescendants("oa1").contains("oa1"));
-        assertFalse(pap.query().graph().getAdjacentAscendants("oa1").contains("o1"));
+        pap.executePML(new TestUserContext("u1"), input);
+        assertFalse(pap.query().graph().getAdjacentDescendants(id("oa1")).contains(id("oa1")));
+        assertFalse(pap.query().graph().getAdjacentAscendants(id("oa1")).contains(id("o1")));
 
         input =
                 """
-                delete object "o1"
+                delete node "o1"
                 """;
-        pap.executePML(superUser, input);
+        pap.executePML(new TestUserContext("u1"), input);
         assertFalse(pap.query().graph().nodeExists("o1"));
 
         input =
                 """
-                delete user attribute "ua1"
-                delete user attribute "ua2"
-                delete user attribute "ua3"
+                delete node "ua1"
+                delete node "ua2"
+                delete node "ua3"
                 """;
-        pap.executePML(superUser, input);
+        pap.executePML(new TestUserContext("u1"), input);
         assertFalse(pap.query().graph().nodeExists("ua1"));
         assertFalse(pap.query().graph().nodeExists("ua2"));
         assertFalse(pap.query().graph().nodeExists("ua3"));
@@ -137,48 +134,48 @@ public class ExecutionTest {
 
         input =
                 """
-                delete object attribute "oa1"
-                delete object attribute "oa2"
-                delete object attribute "oa3"
+                delete node "oa1"
+                delete node "oa2"
+                delete node "oa3"
                 """;
-        pap.executePML(superUser, input);
+        pap.executePML(new TestUserContext("u1"), input);
         assertFalse(pap.query().graph().nodeExists("oa1"));
         assertFalse(pap.query().graph().nodeExists("oa2"));
         assertFalse(pap.query().graph().nodeExists("oa3"));
 
         input =
                 """
-                delete policy class "pc1"
+                delete node "pc1"
                 """;
-        pap.executePML(superUser, input);
+        pap.executePML(new TestUserContext("u1"), input);
         assertFalse(pap.query().graph().nodeExists("pc1"));
     }
 
     @Test
     void testIf() throws PMException {
-         PAP pap = new MemoryPAP();
+         PAP pap = new TestPAP();
         String input = """
                 var x = "test"
                 var y = "test"
-                if equals(x, y) {
+                if x == y {
                     create policy class "pc1"
                 }
                 """;
-        pap.executePML(superUser, input);
+        pap.executePML(new TestUserContext("u1"), input);
         assertTrue(pap.query().graph().nodeExists("pc1"));
 
         input = """
                 var x = "test"
                 var y = "test"
                 var z = "test1"
-                if equals(x, z) {
+                if x == z {
                     create policy class "pc1"
-                } else if equals(x, y) {
+                } else if x == y {
                     create policy class "pc2"
                 }
                 """;
-        pap = new MemoryPAP();
-        pap.executePML(superUser, input);
+        pap = new TestPAP();
+        pap.executePML(new TestUserContext("u1"), input);
 
         assertFalse(pap.query().graph().nodeExists("pc1"));
         assertTrue(pap.query().graph().nodeExists("pc2"));
@@ -187,17 +184,17 @@ public class ExecutionTest {
                 var x = "test"
                 var y = "test1"
                 var z = "test2"
-                if equals(x, z) {
+                if x == z {
                     create policy class "pc1"
-                } else if equals(x, y) {
+                } else if x == y {
                     create policy class "pc2"
                 } else {
                     create policy class "pc3"
                 }
                 """;
-        pap = new MemoryPAP();
+        pap = new TestPAP();
         
-        pap.executePML(superUser, input);
+        pap.executePML(new TestUserContext("u1"), input);
 
         assertFalse(pap.query().graph().nodeExists("pc1"));
         assertFalse(pap.query().graph().nodeExists("pc2"));
@@ -207,15 +204,15 @@ public class ExecutionTest {
                 var x = "test"
                 var y = "test1"
                 var z = "test2"
-                if equals(x, y) {
+                if x == y {
                     create policy class "pc1"
                 } else {
                     create policy class "pc2"
                 }
                 """;
-        pap = new MemoryPAP();
+        pap = new TestPAP();
         
-        pap.executePML(superUser, input);
+        pap.executePML(new TestUserContext("u1"), input);
 
         assertFalse(pap.query().graph().nodeExists("pc1"));
         assertTrue(pap.query().graph().nodeExists("pc2"));
@@ -224,15 +221,15 @@ public class ExecutionTest {
                 var x = "test"
                 var y = "test1"
                 var z = "test2"
-                if !equals(x, y) {
+                if x != y {
                     create policy class "pc1"
                 } else {
                     create policy class "pc2"
                 }
                 """;
-        pap = new MemoryPAP();
+        pap = new TestPAP();
         
-        pap.executePML(superUser, input);
+        pap.executePML(new TestUserContext("u1"), input);
 
         assertTrue(pap.query().graph().nodeExists("pc1"));
         assertFalse(pap.query().graph().nodeExists("pc2"));
@@ -240,14 +237,14 @@ public class ExecutionTest {
 
     @Test
     void testForeach() throws PMException {
-         PAP pap = new MemoryPAP();
+         PAP pap = new TestPAP();
         
         String input = """
                 foreach x in ["pc1", "pc2", "pc3"] {
                     create policy class x
                 }
                 """;
-        pap.executePML(superUser, input);
+        pap.executePML(new TestUserContext("u1"), input);
 
         assertTrue(pap.query().graph().nodeExists("pc1"));
         assertTrue(pap.query().graph().nodeExists("pc2"));
@@ -259,9 +256,9 @@ public class ExecutionTest {
                     create policy class y
                 }
                 """;
-        pap = new MemoryPAP();
+        pap = new TestPAP();
         
-        pap.executePML(superUser, input);
+        pap.executePML(new TestUserContext("u1"), input);
 
         assertTrue(pap.query().graph().nodeExists("pc1"));
         assertTrue(pap.query().graph().nodeExists("pc2"));
@@ -274,9 +271,9 @@ public class ExecutionTest {
                     }
                 }
                 """;
-        pap = new MemoryPAP();
+        pap = new TestPAP();
         
-        pap.executePML(superUser, input);
+        pap.executePML(new TestUserContext("u1"), input);
 
         assertTrue(pap.query().graph().nodeExists("pc1"));
         assertTrue(pap.query().graph().nodeExists("pc2"));
@@ -290,9 +287,9 @@ public class ExecutionTest {
                     }
                 }
                 """;
-        pap = new MemoryPAP();
+        pap = new TestPAP();
         
-        pap.executePML(superUser, input);
+        pap.executePML(new TestUserContext("u1"), input);
 
         assertTrue(pap.query().graph().nodeExists("pc1"));
         assertFalse(pap.query().graph().nodeExists("pc2"));
@@ -306,9 +303,9 @@ public class ExecutionTest {
                     }
                 }
                 """;
-        pap = new MemoryPAP();
+        pap = new TestPAP();
         
-        pap.executePML(superUser, input);
+        pap.executePML(new TestUserContext("u1"), input);
 
         assertFalse(pap.query().graph().nodeExists("pc1"));
         assertFalse(pap.query().graph().nodeExists("pc2"));
@@ -318,7 +315,7 @@ public class ExecutionTest {
                 var a = "test"
                 var b = "test"
                 foreach x in ["pc1", "pc2", "pc3"] {
-                    if equals(a, b) {
+                    if a == b {
                         a = "test2"
                         continue
                     }
@@ -326,9 +323,9 @@ public class ExecutionTest {
                     create policy class x
                 }
                 """;
-        pap = new MemoryPAP();
+        pap = new TestPAP();
         
-        pap.executePML(superUser, input);
+        pap.executePML(new TestUserContext("u1"), input);
 
         assertFalse(pap.query().graph().nodeExists("pc1"));
         assertTrue(pap.query().graph().nodeExists("pc2"));
@@ -344,25 +341,26 @@ public class ExecutionTest {
                 
                 testFunc("pc1")
                 """;
-        PAP pap = new MemoryPAP();
+        PAP pap = new TestPAP();
         
-        pap.executePML(superUser, input);
+        pap.executePML(new TestUserContext("u1"), input);
 
         assertTrue(pap.query().graph().nodeExists("pc1"));
 
         String input1 = """
                 operation testFunc(any x) {
-                    create policy class x
+                    create ua "ua1" in x
                 }
                 
-                testFunc(["pc1"])
+                create pc "pc1"
+                testFunc("pc1")
                 """;
 
         
-        PAP pap1 = new MemoryPAP();
-        assertThrows(ClassCastException.class, () -> pap1.executePML(superUser, input1));
+        PAP pap1 = new TestPAP();
+        assertThrows(IllegalArgumentException.class, () -> pap1.executePML(new TestUserContext("u1"), input1));
 
-        PAP pap2 = new MemoryPAP();
+        PAP pap2 = new TestPAP();
         String input2 = """
                 x := "hello"
                 operation testFunc() {
@@ -374,10 +372,10 @@ public class ExecutionTest {
 
         PMLCompilationException e = assertThrows(
                 PMLCompilationException.class,
-                () -> pap2.executePML(superUser, input2)
+                () -> pap2.executePML(new TestUserContext("u1"), input2)
         );
         assertEquals(1, e.getErrors().size());
-        assertEquals("unknown variable 'x' in scope", e.getErrors().get(0).errorMessage());
+        assertEquals("unknown variable 'x' in scope", e.getErrors().getFirst().errorMessage());
     }
 
     @Test
@@ -387,10 +385,10 @@ public class ExecutionTest {
                 var x = m["k1"]["k1-1"]["k1-1-1"]
                 create policy class x
                 """;
-         PAP pap = new MemoryPAP();
+         PAP pap = new TestPAP();
         
-        pap.executePML(superUser, input);
-        assertTrue(pap.query().graph().getPolicyClasses().contains("v1"));
+        pap.executePML(new TestUserContext("u1"), input);
+        assertTrue(pap.query().graph().getPolicyClasses().contains(id("v1")));
     }
 
     @Test
@@ -398,49 +396,54 @@ public class ExecutionTest {
         String input = """
                 set resource operations ["read", "write"]
                 """;
-         PAP pap = new MemoryPAP();
+         PAP pap = new TestPAP();
         
-        pap.executePML(superUser, input);
+        pap.executePML(new TestUserContext("u1"), input);
         assertTrue(pap.query().operations().getResourceOperations().contains("read"));
 
         String input1 = """
                 set resource operations [["read", "write"], ["exec"]]
                 """;
-        assertThrows(PMException.class, () -> pap.executePML(superUser, input1));
+        assertThrows(PMException.class, () -> pap.executePML(new TestUserContext("u1"), input1));
     }
 
     @Test
     void testDeleteNonExistentNode() throws PMException {
         String input = """
-                delete pc "pc1"
+                delete node "pc1"
                 """;
-         PAP pap = new MemoryPAP();
+         PAP pap = new TestPAP();
         
-        assertDoesNotThrow(() -> pap.executePML(superUser, input));
+        assertDoesNotThrow(() -> pap.executePML(new TestUserContext("u1"), input));
     }
 
     @Test
     void testDeleteProhibition() throws PMException {
-         PAP pap = new MemoryPAP();
+         PAP pap = new TestPAP();
         
         pap.modify().operations().setResourceOperations(new AccessRightSet("read"));
         pap.modify().graph().createPolicyClass("pc1");
-        pap.modify().graph().createUserAttribute("ua1", List.of("pc1"));
-        pap.modify().graph().createObjectAttribute("oa1", List.of("pc1"));
+        pap.modify().graph().createUserAttribute("ua1", ids("pc1"));
+        pap.modify().graph().createObjectAttribute("oa1", ids("pc1"));
 
         String input = """
                 create prohibition "p1"
                 deny user attribute "ua1"
                 access rights ["read"]
-                on union of ["oa1"]
+                on union of {"oa1": false}
+                
+                create prohibition "p2"
+                deny user attribute "ua1"
+                access rights ["read"]
+                on union of {"oa1": false}
                 """;
-        pap.executePML(superUser, input);
+        pap.executePML(new TestUserContext("u1"), input);
 
         input = """
                 delete prohibition "p1"
                 """;
-        pap.executePML(superUser, input);
-        assertFalse(pap.query().prohibitions().getProhibitions().containsKey("p1"));
+        pap.executePML(new TestUserContext("u1"), input);
+        assertTrue(pap.query().prohibitions().getProhibitions().stream().filter(p -> p.getName().equals("p1")).toList().isEmpty());
     }
 
     @Test
@@ -453,8 +456,8 @@ public class ExecutionTest {
                 create policy class testFunc("test")
                 """;
 
-         PAP pap = new MemoryPAP();
-        pap.deserialize(new UserContext("u1"), pml, new PMLDeserializer());
+         PAP pap = new TestPAP();
+        pap.executePML(new TestUserContext("u1"), pml);
 
         assertTrue(pap.query().graph().nodeExists("test"));
     }
@@ -470,8 +473,8 @@ public class ExecutionTest {
                 create policy class testFunc("test")
                 """;
 
-         PAP pap = new MemoryPAP();
-        pap.deserialize(new UserContext("u1"), pml, new PMLDeserializer());
+         PAP pap = new TestPAP();
+        pap.executePML(new TestUserContext("u1"), pml);
 
         assertFalse(pap.query().graph().nodeExists("test"));
         assertTrue(pap.query().graph().nodeExists("test2"));
